force-app/main/default/objects/MAP_Scorecard__c/fields/Building_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Building_Rapport__c</fullName>
    <inlineHelpText>Did the Success Manager start by building rapport?</inlineHelpText>
    <label>Building Rapport?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>