force-app/main/default/objects/MAP_Scorecard__c/fields/Business_and_Sales_Process_Practices__c.field-meta.xml
<CustomField>
    <fullName>Business_and_Sales_Process_Practices__c</fullName>
    <inlineHelpText>Effectiveness of “Your Business &amp; Your Sales Process + Non Negotiable Sales Best Practices”</inlineHelpText>
    <label>Business and Sales Process/Practices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>