force-app/main/default/objects/MAP_Scorecard__c/fields/Calendar_Invite_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Invite_Accepted__c</fullName>
    <description>Used on Sapper Appointment Scorecard</description>
    <label>Calendar Invite Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Confirmed on Phone (SDR)</fullName>
            </value>
            <value>
                <fullName>Client Handoff</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>