force-app/main/default/objects/MAP_Scorecard__c/fields/Calibration_Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Call_Score__c</fullName>
    <formula>(CASE(Set_the_Agenda__c ,
&apos;Yes&apos;,2,
&apos;No&apos;,0,
0)+
IF( Was_the_PSR_on_the_Call__c = TRUE,2,0)
+
CASE( AR__c ,
&apos;Yes&apos;,2,
&apos;No&apos;,0,
0)+
CASE( Last_Meeting_Action_Items_with_Actual_Im__c,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( CFS_Score__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Identify_Target_Market__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Top_of_Mind_Awareness__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Data_Collection__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Scoring_Calls__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Client_s_Pipeline__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Nurture_to_Close_Sales_Consulting_Biz__c ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Referrals_Additional_Services__c ,
&apos;Yes&apos;,2,
&apos;No&apos;,0,
0)+
CASE( Recap_Action_Items_with_Desire_Impact__c  ,
&apos;Yes&apos;,2,
&apos;Somewhat&apos;,1,
&apos;No&apos;,0,
0)+
CASE( Confirm_Next_Meeting_Date__c  ,
&apos;Yes&apos;,2,
&apos;No&apos;,0,
0))/28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calibration Call Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>