force-app/main/default/objects/MAP_Scorecard__c/fields/Call_Marked_Accuracy_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Call_Marked_Accuracy_Feedback__c</fullName>
    <label>Call Marked Accurately Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>