force-app/main/default/objects/MAP_Scorecard__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Delivery Owner, Contact Owner, or Caller</inlineHelpText>
    <label>Delivery Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards4EYS</relationshipName>
    <type>Lookup</type>
</CustomField>