force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Case_Accuracy__c</fullName>
    <description>Used for Digital/Development Case Scorecard</description>
    <inlineHelpText>Has the case been completed with accuracy based on the manager&apos;s and client&apos;s direction?</inlineHelpText>
    <label>Case Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>