force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Addressed_Within_2_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Addressed_Within_2_Business_Days__c</fullName>
    <description>Used for Partner Operation Analyst case management score</description>
    <inlineHelpText>18 Business Hours or less taken to address the case</inlineHelpText>
    <label>2. Case Addressed Within 2 Business Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>