force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Case Scorecards</description>
    <label>Case Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards2</relationshipName>
    <type>Lookup</type>
</CustomField>