force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Case Scorecards</description>
    <label>Case/Issue Number</label>
    <referenceTo>SFDC_Cases_and_Issues__c</referenceTo>
    <relationshipLabel>Additional Scorecards</relationshipLabel>
    <relationshipName>Additional_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>