force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Issue_Number_Is_Tied__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue_Number_Is_Tied__c</fullName>
    <description>Used for Partner Operation Analyst List Management Score</description>
    <inlineHelpText>•	Industries make sense for client
•	All unwanted industries removed</inlineHelpText>
    <label>3. Industries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>