force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Name_Describes_The_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Name_Describes_The_Request__c</fullName>
    <description>Used for Partner Operation Analyst Case Management Score</description>
    <label>7. Case Name Describes The Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>