force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Resolved_Within_10_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolved_Within_10_Business_Days__c</fullName>
    <description>Used for Partner Operation Analyst Case Management Score</description>
    <inlineHelpText>•	90 Hours - Resolved Time (Business Hours)
•	Exception: Unavoidable client or internal issues were documented</inlineHelpText>
    <label>1. Case Resolved Within 10 Business Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>