force-app/main/default/objects/MAP_Scorecard__c/fields/Case_Type_Accurately_Reflects_Task__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Accurately_Reflects_Task__c</fullName>
    <description>Used for Partner Operation Analyst Case Management Score</description>
    <label>6. Case Type Accurately Reflects Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>