force-app/main/default/objects/MAP_Scorecard__c/fields/Case_was_Addressed_Properly__c.field-meta.xml
<CustomField>
    <fullName>Case_was_Addressed_Properly__c</fullName>
    <description>Used for Partner Operation Analyst case management score</description>
    <inlineHelpText>•	POA Chatted an EDC or requested additional information/documentation
•	POA resolved the case within 2 business days – No EDC chatter needed</inlineHelpText>
    <label>3. Case was Addressed Properly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>