force-app/main/default/objects/MAP_Scorecard__c/fields/Category_Tags__c.field-meta.xml
<CustomField>
    <fullName>Category_Tags__c</fullName>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>The correct category is selected and the correct tags have been applied to the post.</inlineHelpText>
    <label>Category/Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>