force-app/main/default/objects/MAP_Scorecard__c/fields/Category_Tags_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Category_Tags_Feedback__c</fullName>
    <defaultValue>&quot;The correct category is selected and the correct tags have been applied to the post.&quot;</defaultValue>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>The correct category is selected and the correct tags have been applied to the post.</inlineHelpText>
    <label>Category/Tags Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>