force-app/main/default/objects/MAP_Scorecard__c/fields/CFS_Score__c.field-meta.xml
<CustomField>
    <fullName>CFS_Score__c</fullName>
    <description>Used on the Partner Meeting and VMM Scorecard</description>
    <inlineHelpText>All three questions asked and answered. Are we or are we not talking to the KDM?</inlineHelpText>
    <label>CFS Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>