force-app/main/default/objects/MAP_Scorecard__c/fields/CFS_Score_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CFS_Score_Feedback__c</fullName>
    <label>LTP Score Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>