force-app/main/default/objects/MAP_Scorecard__c/fields/Chatter_Utilization_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Utilization_Feedback__c</fullName>
    <label>Chatter Utilization Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>