force-app/main/default/objects/MAP_Scorecard__c/fields/Chatter_Utilization_Score__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Utilization_Score__c</fullName>
    <inlineHelpText>Chatter is organized and easy to follow, all questions are answered within the feed and its understood what is needed/missing based on the feed.</inlineHelpText>
    <label>Chatter Utilization Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>