force-app/main/default/objects/MAP_Scorecard__c/fields/Clarity__c.field-meta.xml
<CustomField>
    <fullName>Clarity__c</fullName>
    <description>Used to score copywriter on Content Scorecard</description>
    <inlineHelpText>COPYWRITERS / STRATEGISTS: Are there long or choppy sentences? Are there excess filler words?</inlineHelpText>
    <label>Clarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>