force-app/main/default/objects/MAP_Scorecard__c/fields/Clarity_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Feedback__c</fullName>
    <label>Clarity Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>