force-app/main/default/objects/MAP_Scorecard__c/fields/Clarity_Variance__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Variance__c</fullName>
    <description>Used on the Content Variance scorecard</description>
    <inlineHelpText>COPYWRITERS: Are there long or choppy sentences? Are there excess filler words?________________________________________EDITORS: Were overall mistakes caught?</inlineHelpText>
    <label>Clarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>