force-app/main/default/objects/MAP_Scorecard__c/fields/Clarity_Variance_Score__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Variance_Score__c</fullName>
    <description>Clarity variance score</description>
    <label>Clarity Variance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>