force-app/main/default/objects/MAP_Scorecard__c/fields/Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness__c</fullName>
    <label>Cleanliness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>