force-app/main/default/objects/MAP_Scorecard__c/fields/Cleansing_Program__c.field-meta.xml
<CustomField>
    <fullName>Cleansing_Program__c</fullName>
    <description>Used for Partner Operations Analyst Account Management score</description>
    <inlineHelpText>• Completed by the start of the 2nd business day after it was submitted
• Acct fields updated
• Goals and method of auditing determined
• Expectations &amp; goals communicated to PSR, recapped/documented via email
• Manager CC’d or was forwarded the email</inlineHelpText>
    <label>3. Cleansing Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>