force-app/main/default/objects/MAP_Scorecard__c/fields/Clearly_prep_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>Clearly_prep_the_meeting__c</fullName>
    <inlineHelpText>notes made on packet, mention speaking with the sales rep to help with handoff, review of the website, obvious review of the opportunity/client setup sheet, call guide ready with questions of highlights, recap action item statuses at the beginning of call</inlineHelpText>
    <label>Was the meeting clearly prepped?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>