force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Client_Knowledge__c</fullName>
    <description>Used on the content quality scorecard</description>
    <inlineHelpText>COPYWRITERS / STRATEGISTS: Is the client represented correctly? Are their services and products represented correctly? If have any specific requirements, have they been applied?</inlineHelpText>
    <label>Client Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>