force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Knowledge_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Knowledge_Feedback__c</fullName>
    <description>Used on the cont quality scorecard</description>
    <label>Client Knowledge Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>