force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Knowledge_Variance__c.field-meta.xml
<CustomField>
    <fullName>Client_Knowledge_Variance__c</fullName>
    <description>Used on Content Variance scorecard</description>
    <inlineHelpText>COPYWRITERS: Are both client knowledge &amp; industry knowledge represented reputably &amp; accurately?________________________________________EDITORS: Was constructive feedback provided?</inlineHelpText>
    <label>Client Knowledge Variance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>