force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Knowledge_Variance_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Knowledge_Variance_Score__c</fullName>
    <inlineHelpText>Was the client information checked and accurate?</inlineHelpText>
    <label>Client Knowledge Variance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>