force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Representation__c.field-meta.xml
<CustomField>
    <fullName>Client_Representation__c</fullName>
    <inlineHelpText>Is client knowledge represented reputably &amp; accurately?</inlineHelpText>
    <label>Client Representation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>