force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Representation_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Representation_Feedback__c</fullName>
    <description>Used for VMM Scorecard: Social</description>
    <label>Client Representation Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>