force-app/main/default/objects/MAP_Scorecard__c/fields/Client_s_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Pipeline__c</fullName>
    <inlineHelpText>Get updates on top 5, most memorable appointment, Did all meetings happen?</inlineHelpText>
    <label>Client&apos;s Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>