force-app/main/default/objects/MAP_Scorecard__c/fields/Client_s_Pipeline_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Pipeline_Feedback__c</fullName>
    <label>Client&apos;s Pipeline Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>