force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Update_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Update_Feedback__c</fullName>
    <description>Used to score Sapper MRM</description>
    <label>Client Update Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>