force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Updates__c.field-meta.xml
<CustomField>
    <fullName>Client_Updates__c</fullName>
    <description>Used to score Sapper MRM</description>
    <label>Client Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>