force-app/main/default/objects/MAP_Scorecard__c/fields/Client_Voice_Style_Met__c.field-meta.xml
<CustomField>
    <fullName>Client_Voice_Style_Met__c</fullName>
    <label>Client Voice/Style Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>