force-app/main/default/objects/MAP_Scorecard__c/fields/Cohesive_with_Brand_and_Past_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Cohesive_with_Brand_and_Past_Pieces__c</fullName>
    <inlineHelpText>Audited by: Design Proofer
Score Impacted: Designer Score</inlineHelpText>
    <label>Cohesive with Brand and Past Pieces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>