force-app/main/default/objects/MAP_Scorecard__c/fields/Cohesive_with_Brand_Past_Pieces_Video__c.field-meta.xml
<CustomField>
    <fullName>Cohesive_with_Brand_Past_Pieces_Video__c</fullName>
    <inlineHelpText>Audited by: Producer |
Score Impacted: Video Production Score</inlineHelpText>
    <label>Cohesive with Brand &amp; Past Pieces-Video</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>