force-app/main/default/objects/MAP_Scorecard__c/fields/Commitment_Recap__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Recap__c</fullName>
    <description>Used on Outbound MRM Scorecard</description>
    <label>Commitment Recap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>