force-app/main/default/objects/MAP_Scorecard__c/fields/Commitment_Recap_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Recap_Feedback__c</fullName>
    <description>Used on Outbound MRM Scorecard</description>
    <label>Commitment Recap Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>