force-app/main/default/objects/MAP_Scorecard__c/fields/Commitments_From_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Commitments_From_Meeting__c</fullName>
    <inlineHelpText>Effectiveness of Commitments from this meeting</inlineHelpText>
    <label>Commitments From Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>