force-app/main/default/objects/MAP_Scorecard__c/fields/Communicated_to_digital_strategy__c.field-meta.xml
<CustomField>
    <fullName>Communicated_to_digital_strategy__c</fullName>
    <label>Communicated to digital strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>